# whatlang-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml  release.yml
src/: lib.rs  main.rs
tests/: cli_test.rs  text.txt  texts.json
