[package]
name = "whatlang-cli"
version = "0.1.0"
edition = "2021"
authors = ["Constantin Weber <constantin.weber@posteo.de>"]

[dependencies]
clap = {version = "4.5", features = ["derive"]}
whatlang = "0.16"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
log = "0.4"
env_logger = "0.11"



[dev-dependencies]
rand = "0.8"